// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Panel theming — CSS custom property classes > DOM snapshots — default + branded theme > branded theme (--pi-primary: #ff4500) > BatchManagerPanel snapshot 1`] = `
<div>
  <div
    class="pi-surface-dark min-h-screen p-4 pb-20"
    data-testid="panel-work-order"
    style="font-family: var(--pi-font, system-ui);"
  >
    <div
      class="max-w-md mx-auto space-y-6"
    >
      <div
        class="flex items-center justify-between p-4 rounded-2xl backdrop-blur-md"
        style="background-color: color-mix(in srgb, var(--pi-primary, #3b82f6) 20%, transparent); border: 1px solid color-mix(in srgb, var(--pi-primary, #3b82f6) 30%, transparent);"
      >
        <div
          class="flex items-center gap-3"
        >
          <div
            class="w-10 h-10 rounded-xl flex items-center justify-center shadow-lg"
            style="background-color: var(--pi-primary, #3b82f6);"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-package"
              fill="none"
              height="20"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              style="color: var(--pi-text);"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z"
              />
              <path
                d="M12 22V12"
              />
              <polyline
                points="3.29 7 12 12 20.71 7"
              />
              <path
                d="m7.5 4.27 9 5.15"
              />
            </svg>
          </div>
          <div>
            <h1
              class="text-base font-bold leading-none"
            >
              Test Batch Product
            </h1>
            <p
              class="text-[10px] uppercase tracking-widest mt-1 font-bold"
              style="color: var(--pi-primary, #3b82f6);"
            >
              Batch Management Console
            </p>
          </div>
        </div>
      </div>
      <div
        class="pi-card-dark rounded-3xl overflow-hidden shadow-2xl backdrop-blur-sm"
        style="background-color: var(--pi-surface);"
      >
        <div
          class="p-5"
          style="border-bottom: 1px solid var(--pi-border); background-color: color-mix(in srgb, var(--pi-primary) 6%, transparent);"
        >
          <div
            class="flex justify-between items-start"
          >
            <div
              class="space-y-1"
            >
              <h3
                class="text-base font-bold tracking-tight"
                style="color: var(--pi-text);"
              >
                Model A
              </h3>
              <div
                class="flex items-center gap-2"
              >
                <span
                  class="text-xs font-mono px-2 py-0.5 rounded-md"
                  style="color: var(--pi-muted, #64748b); background-color: var(--pi-surface); border: 1px solid var(--pi-border);"
                >
                  MOD-A
                </span>
                <span
                  class="text-[10px] font-bold px-2 py-0.5 rounded-full uppercase tracking-tighter"
                  style="background-color: color-mix(in srgb, var(--pi-success, #10b981) 10%, transparent); color: var(--pi-success, #10b981); border: 1px solid color-mix(in srgb, var(--pi-success, #10b981) 20%, transparent);"
                >
                  BULK
                </span>
              </div>
            </div>
            <div
              class="text-right"
            >
              <div
                class="text-2xl font-black leading-none"
                style="color: var(--pi-primary, #3b82f6);"
              >
                50
              </div>
              <div
                class="text-[10px] font-bold uppercase mt-1"
                style="color: var(--pi-muted, #64748b);"
              >
                Total Stock
              </div>
            </div>
          </div>
        </div>
        <div
          class="p-5 space-y-4"
        >
          <div
            class="space-y-4"
          >
            <div
              class="space-y-2"
            >
              <label
                class="text-[10px] font-bold uppercase tracking-widest pl-1"
                style="color: var(--pi-muted, #64748b);"
              >
                Active Lots / Batches
              </label>
              <div
                class="grid gap-2"
              >
                <div
                  class="text-center py-6 text-xs italic rounded-2xl border border-dashed"
                  style="color: var(--pi-muted, #64748b); background-color: var(--pi-surface); border-color: var(--pi-border);"
                >
                  No active lots for this model
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="fixed bottom-0 left-0 right-0 p-4 transition-all duration-300 z-50"
    >
      <div
        class="max-w-md mx-auto"
      />
    </div>
  </div>
</div>
`;

exports[`Panel theming — CSS custom property classes > DOM snapshots — default + branded theme > branded theme (--pi-primary: #ff4500) > BucketPanel snapshot 1`] = `
<div>
  <div
    class="space-y-4"
    data-testid="panel-batch-composition"
  >
    <div
      class="grid gap-3"
    >
      <div>
        <label
          class="pi-label"
        >
          Lot Number
        </label>
        <input
          class="pi-input"
          placeholder="Lot Number"
          type="text"
          value=""
        />
      </div>
      <div>
        <label
          class="pi-label"
        >
          Quantity
        </label>
        <input
          class="pi-input font-bold"
          type="number"
          value="1"
        />
      </div>
    </div>
    <div
      class="grid grid-cols-1 gap-3 pt-2"
    >
      <button
        class="pi-btn-accent"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-minus w-5 h-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2.5"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
        </svg>
         
        REMOVE STOCK
      </button>
    </div>
  </div>
</div>
`;

exports[`Panel theming — CSS custom property classes > DOM snapshots — default + branded theme > branded theme (--pi-primary: #ff4500) > CounterPanel snapshot 1`] = `
<div>
  <div
    class="space-y-5"
    data-testid="panel-quantity"
  >
    <div>
      <label
        class="pi-label"
      >
        Quantity
      </label>
      <input
        class="pi-input text-center text-3xl font-bold"
        type="number"
        value="1"
      />
    </div>
    <div
      class="grid grid-cols-2 gap-3"
    >
      <button
        class="pi-btn-success"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus w-5 h-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2.5"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
         
        ADD
      </button>
      <button
        class="pi-btn-danger"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-minus w-5 h-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2.5"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
        </svg>
         
        REMOVE
      </button>
    </div>
  </div>
</div>
`;

exports[`Panel theming — CSS custom property classes > DOM snapshots — default + branded theme > branded theme (--pi-primary: #ff4500) > DimensionPanel snapshot 1`] = `
<div>
  <div
    class="space-y-4"
    data-testid="panel-dimension"
  >
    <div
      class="grid gap-3"
    >
      <div>
        <label
          class="pi-label"
        >
          Length
           
          (m)
        </label>
        <input
          class="pi-input text-center text-lg font-bold p-2"
          placeholder="Enter length"
          step="any"
          type="number"
          value="3"
        />
      </div>
      <div>
        <label
          class="pi-label"
        >
          Width
           
          (m)
        </label>
        <input
          class="pi-input text-center text-lg font-bold p-2"
          placeholder="Enter width"
          step="any"
          type="number"
          value="4"
        />
      </div>
    </div>
    <div
      class="pi-computed"
    >
      <div
        class="pi-computed-label"
      >
        Computed Value
      </div>
      <div
        class="pi-computed-value"
      >
        12.00
         
        m²
      </div>
      <div
        class="pi-computed-hint"
      >
        Formula:
         
        length * width
      </div>
    </div>
    <div
      class="grid grid-cols-2 gap-3"
    >
      <button
        class="pi-btn-success"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus w-5 h-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2.5"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
         
        ADD
      </button>
      <button
        class="pi-btn-danger"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-minus w-5 h-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2.5"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
        </svg>
         
        REMOVE
      </button>
    </div>
  </div>
</div>
`;

exports[`Panel theming — CSS custom property classes > DOM snapshots — default + branded theme > branded theme (--pi-primary: #ff4500) > TimeBasedPanel snapshot 1`] = `
<div>
  <div
    class="space-y-4"
    data-testid="panel-time-based"
  >
    <div
      class="grid gap-3"
    >
      <div>
        <label
          class="pi-label"
        >
          Quantity
        </label>
        <input
          class="pi-input text-center text-3xl font-bold"
          type="number"
          value="10"
        />
      </div>
      <div>
        <label
          class="pi-label"
        >
          Expiry Date
        </label>
        <input
          class="pi-input"
          type="date"
          value=""
        />
      </div>
      <div>
        <label
          class="pi-label"
        >
          Batch Reference
        </label>
        <input
          class="pi-input"
          placeholder="Optional batch reference"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="grid grid-cols-2 gap-3"
    >
      <button
        class="pi-btn-success"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus w-5 h-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2.5"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
         
        ADD
      </button>
      <button
        class="pi-btn-danger"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-minus w-5 h-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2.5"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
        </svg>
         
        REMOVE
      </button>
    </div>
  </div>
</div>
`;

exports[`Panel theming — CSS custom property classes > DOM snapshots — default + branded theme > branded theme (--pi-primary: #ff4500) > TrackerPanel snapshot 1`] = `
<div>
  <div
    class="space-y-4"
    data-testid="panel-tracker-form"
  >
    <div
      class="grid gap-3"
    >
      <div>
        <label
          class="pi-label"
        >
          Item
        </label>
        <div
          class="flex flex-col gap-1.5 "
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="w-full bg-zinc-900 border border-white/[0.06] rounded-lg text-sm text-zinc-50 placeholder:text-zinc-500 transition-all duration-150 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-indigo-500/30 focus-visible:border-indigo-500/50 disabled:opacity-50 disabled:cursor-not-allowed h-9 px-3 flex items-center justify-between text-left cursor-pointer"
            role="combobox"
            style="background-color: var(--pi-input-bg, #18181b); border-color: var(--pi-border, rgba(255,255,255,0.06)); color: var(--pi-text, #fafafa);"
            type="button"
          >
            <span
              class="block truncate"
              style="color: var(--pi-muted, #71717a);"
            >
              Select item...
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down shrink-0 transition-transform duration-150"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              style="color: var(--pi-muted, #71717a);"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </div>
        <p
          class="text-xs mt-1"
          style="color: var(--pi-muted, #64748b);"
        >
          Items loaded from product inventory
        </p>
      </div>
      <div>
        <label
          class="pi-label"
        >
          Status
        </label>
        <div
          class="flex flex-wrap gap-2"
        >
          <button
            aria-pressed="false"
            class="pi-status-btn inline-flex items-center gap-1.5 px-3 py-2 rounded-md text-sm font-semibold transition disabled:opacity-50 disabled:cursor-not-allowed"
            style="background-color: var(--pi-input-bg, #27272a); color: var(--pi-text, #f4f4f5); box-shadow: 0 0 0 1px var(--pi-border, #3f3f46);"
            type="button"
          >
            Active
          </button>
          <button
            aria-pressed="false"
            class="pi-status-btn inline-flex items-center gap-1.5 px-3 py-2 rounded-md text-sm font-semibold transition disabled:opacity-50 disabled:cursor-not-allowed"
            style="background-color: var(--pi-input-bg, #27272a); color: var(--pi-text, #f4f4f5); box-shadow: 0 0 0 1px var(--pi-border, #3f3f46);"
            type="button"
          >
            Repair
          </button>
        </div>
      </div>
      <div>
        <label
          class="pi-label"
        >
          Notes
        </label>
        <input
          class="pi-input"
          placeholder="Optional notes..."
          type="text"
          value=""
        />
      </div>
    </div>
    <button
      class="w-full pi-btn-accent py-3 disabled:opacity-50 transition-colors"
      disabled=""
    >
      UPDATE STATUS
    </button>
  </div>
</div>
`;

exports[`Panel theming — CSS custom property classes > DOM snapshots — default + branded theme > default theme > BatchManagerPanel snapshot 1`] = `
<div>
  <div
    class="pi-surface-dark min-h-screen p-4 pb-20"
    data-testid="panel-work-order"
    style="font-family: var(--pi-font, system-ui);"
  >
    <div
      class="max-w-md mx-auto space-y-6"
    >
      <div
        class="flex items-center justify-between p-4 rounded-2xl backdrop-blur-md"
        style="background-color: color-mix(in srgb, var(--pi-primary, #3b82f6) 20%, transparent); border: 1px solid color-mix(in srgb, var(--pi-primary, #3b82f6) 30%, transparent);"
      >
        <div
          class="flex items-center gap-3"
        >
          <div
            class="w-10 h-10 rounded-xl flex items-center justify-center shadow-lg"
            style="background-color: var(--pi-primary, #3b82f6);"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-package"
              fill="none"
              height="20"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              style="color: var(--pi-text);"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z"
              />
              <path
                d="M12 22V12"
              />
              <polyline
                points="3.29 7 12 12 20.71 7"
              />
              <path
                d="m7.5 4.27 9 5.15"
              />
            </svg>
          </div>
          <div>
            <h1
              class="text-base font-bold leading-none"
            >
              Test Batch Product
            </h1>
            <p
              class="text-[10px] uppercase tracking-widest mt-1 font-bold"
              style="color: var(--pi-primary, #3b82f6);"
            >
              Batch Management Console
            </p>
          </div>
        </div>
      </div>
      <div
        class="pi-card-dark rounded-3xl overflow-hidden shadow-2xl backdrop-blur-sm"
        style="background-color: var(--pi-surface);"
      >
        <div
          class="p-5"
          style="border-bottom: 1px solid var(--pi-border); background-color: color-mix(in srgb, var(--pi-primary) 6%, transparent);"
        >
          <div
            class="flex justify-between items-start"
          >
            <div
              class="space-y-1"
            >
              <h3
                class="text-base font-bold tracking-tight"
                style="color: var(--pi-text);"
              >
                Model A
              </h3>
              <div
                class="flex items-center gap-2"
              >
                <span
                  class="text-xs font-mono px-2 py-0.5 rounded-md"
                  style="color: var(--pi-muted, #64748b); background-color: var(--pi-surface); border: 1px solid var(--pi-border);"
                >
                  MOD-A
                </span>
                <span
                  class="text-[10px] font-bold px-2 py-0.5 rounded-full uppercase tracking-tighter"
                  style="background-color: color-mix(in srgb, var(--pi-success, #10b981) 10%, transparent); color: var(--pi-success, #10b981); border: 1px solid color-mix(in srgb, var(--pi-success, #10b981) 20%, transparent);"
                >
                  BULK
                </span>
              </div>
            </div>
            <div
              class="text-right"
            >
              <div
                class="text-2xl font-black leading-none"
                style="color: var(--pi-primary, #3b82f6);"
              >
                50
              </div>
              <div
                class="text-[10px] font-bold uppercase mt-1"
                style="color: var(--pi-muted, #64748b);"
              >
                Total Stock
              </div>
            </div>
          </div>
        </div>
        <div
          class="p-5 space-y-4"
        >
          <div
            class="space-y-4"
          >
            <div
              class="space-y-2"
            >
              <label
                class="text-[10px] font-bold uppercase tracking-widest pl-1"
                style="color: var(--pi-muted, #64748b);"
              >
                Active Lots / Batches
              </label>
              <div
                class="grid gap-2"
              >
                <div
                  class="text-center py-6 text-xs italic rounded-2xl border border-dashed"
                  style="color: var(--pi-muted, #64748b); background-color: var(--pi-surface); border-color: var(--pi-border);"
                >
                  No active lots for this model
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="fixed bottom-0 left-0 right-0 p-4 transition-all duration-300 z-50"
    >
      <div
        class="max-w-md mx-auto"
      />
    </div>
  </div>
</div>
`;

exports[`Panel theming — CSS custom property classes > DOM snapshots — default + branded theme > default theme > BucketPanel snapshot 1`] = `
<div>
  <div
    class="space-y-4"
    data-testid="panel-batch-composition"
  >
    <div
      class="grid gap-3"
    >
      <div>
        <label
          class="pi-label"
        >
          Lot Number
        </label>
        <input
          class="pi-input"
          placeholder="Lot Number"
          type="text"
          value=""
        />
      </div>
      <div>
        <label
          class="pi-label"
        >
          Quantity
        </label>
        <input
          class="pi-input font-bold"
          type="number"
          value="1"
        />
      </div>
    </div>
    <div
      class="grid grid-cols-1 gap-3 pt-2"
    >
      <button
        class="pi-btn-accent"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-minus w-5 h-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2.5"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
        </svg>
         
        REMOVE STOCK
      </button>
    </div>
  </div>
</div>
`;

exports[`Panel theming — CSS custom property classes > DOM snapshots — default + branded theme > default theme > CounterPanel snapshot 1`] = `
<div>
  <div
    class="space-y-5"
    data-testid="panel-quantity"
  >
    <div>
      <label
        class="pi-label"
      >
        Quantity
      </label>
      <input
        class="pi-input text-center text-3xl font-bold"
        type="number"
        value="1"
      />
    </div>
    <div
      class="grid grid-cols-2 gap-3"
    >
      <button
        class="pi-btn-success"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus w-5 h-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2.5"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
         
        ADD
      </button>
      <button
        class="pi-btn-danger"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-minus w-5 h-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2.5"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
        </svg>
         
        REMOVE
      </button>
    </div>
  </div>
</div>
`;

exports[`Panel theming — CSS custom property classes > DOM snapshots — default + branded theme > default theme > DimensionPanel snapshot 1`] = `
<div>
  <div
    class="space-y-4"
    data-testid="panel-dimension"
  >
    <div
      class="grid gap-3"
    >
      <div>
        <label
          class="pi-label"
        >
          Length
           
          (m)
        </label>
        <input
          class="pi-input text-center text-lg font-bold p-2"
          placeholder="Enter length"
          step="any"
          type="number"
          value="3"
        />
      </div>
      <div>
        <label
          class="pi-label"
        >
          Width
           
          (m)
        </label>
        <input
          class="pi-input text-center text-lg font-bold p-2"
          placeholder="Enter width"
          step="any"
          type="number"
          value="4"
        />
      </div>
    </div>
    <div
      class="pi-computed"
    >
      <div
        class="pi-computed-label"
      >
        Computed Value
      </div>
      <div
        class="pi-computed-value"
      >
        12.00
         
        m²
      </div>
      <div
        class="pi-computed-hint"
      >
        Formula:
         
        length * width
      </div>
    </div>
    <div
      class="grid grid-cols-2 gap-3"
    >
      <button
        class="pi-btn-success"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus w-5 h-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2.5"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
         
        ADD
      </button>
      <button
        class="pi-btn-danger"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-minus w-5 h-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2.5"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
        </svg>
         
        REMOVE
      </button>
    </div>
  </div>
</div>
`;

exports[`Panel theming — CSS custom property classes > DOM snapshots — default + branded theme > default theme > TimeBasedPanel snapshot 1`] = `
<div>
  <div
    class="space-y-4"
    data-testid="panel-time-based"
  >
    <div
      class="grid gap-3"
    >
      <div>
        <label
          class="pi-label"
        >
          Quantity
        </label>
        <input
          class="pi-input text-center text-3xl font-bold"
          type="number"
          value="10"
        />
      </div>
      <div>
        <label
          class="pi-label"
        >
          Expiry Date
        </label>
        <input
          class="pi-input"
          type="date"
          value=""
        />
      </div>
      <div>
        <label
          class="pi-label"
        >
          Batch Reference
        </label>
        <input
          class="pi-input"
          placeholder="Optional batch reference"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="grid grid-cols-2 gap-3"
    >
      <button
        class="pi-btn-success"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus w-5 h-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2.5"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
         
        ADD
      </button>
      <button
        class="pi-btn-danger"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-minus w-5 h-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2.5"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
        </svg>
         
        REMOVE
      </button>
    </div>
  </div>
</div>
`;

exports[`Panel theming — CSS custom property classes > DOM snapshots — default + branded theme > default theme > TrackerPanel snapshot 1`] = `
<div>
  <div
    class="space-y-4"
    data-testid="panel-tracker-form"
  >
    <div
      class="grid gap-3"
    >
      <div>
        <label
          class="pi-label"
        >
          Item
        </label>
        <div
          class="flex flex-col gap-1.5 "
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="w-full bg-zinc-900 border border-white/[0.06] rounded-lg text-sm text-zinc-50 placeholder:text-zinc-500 transition-all duration-150 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-indigo-500/30 focus-visible:border-indigo-500/50 disabled:opacity-50 disabled:cursor-not-allowed h-9 px-3 flex items-center justify-between text-left cursor-pointer"
            role="combobox"
            style="background-color: var(--pi-input-bg, #18181b); border-color: var(--pi-border, rgba(255,255,255,0.06)); color: var(--pi-text, #fafafa);"
            type="button"
          >
            <span
              class="block truncate"
              style="color: var(--pi-muted, #71717a);"
            >
              Select item...
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down shrink-0 transition-transform duration-150"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              style="color: var(--pi-muted, #71717a);"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </div>
        <p
          class="text-xs mt-1"
          style="color: var(--pi-muted, #64748b);"
        >
          Items loaded from product inventory
        </p>
      </div>
      <div>
        <label
          class="pi-label"
        >
          Status
        </label>
        <div
          class="flex flex-wrap gap-2"
        >
          <button
            aria-pressed="false"
            class="pi-status-btn inline-flex items-center gap-1.5 px-3 py-2 rounded-md text-sm font-semibold transition disabled:opacity-50 disabled:cursor-not-allowed"
            style="background-color: var(--pi-input-bg, #27272a); color: var(--pi-text, #f4f4f5); box-shadow: 0 0 0 1px var(--pi-border, #3f3f46);"
            type="button"
          >
            Active
          </button>
          <button
            aria-pressed="false"
            class="pi-status-btn inline-flex items-center gap-1.5 px-3 py-2 rounded-md text-sm font-semibold transition disabled:opacity-50 disabled:cursor-not-allowed"
            style="background-color: var(--pi-input-bg, #27272a); color: var(--pi-text, #f4f4f5); box-shadow: 0 0 0 1px var(--pi-border, #3f3f46);"
            type="button"
          >
            Repair
          </button>
        </div>
      </div>
      <div>
        <label
          class="pi-label"
        >
          Notes
        </label>
        <input
          class="pi-input"
          placeholder="Optional notes..."
          type="text"
          value=""
        />
      </div>
    </div>
    <button
      class="w-full pi-btn-accent py-3 disabled:opacity-50 transition-colors"
      disabled=""
    >
      UPDATE STATUS
    </button>
  </div>
</div>
`;
